--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* header style start */
 .header h1 {
     display: inline-block;
     font-size: 75px;
@@ -36,7 +36,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* header style end */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -47,7 +47,7 @@ p {
     font-size: 25px;
     line-height: 1.3;
 }
-
+/* hero style start */
 .hero {
     height: 1000px;
     width: 100%;
@@ -57,7 +57,9 @@ p {
     background-position: center;
     position: relative;
 }
+/* Hero Style End  */
 
+/* Utility Classes */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -67,19 +69,23 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/* Utility Clsses End */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
     text-align: center;
 }
+/* Utility Class Start */
 .text-right {
     text-align: right;
 }
 .text-left {
     text-align: left;
 }
+/* Utility Class End */
+
+/* Benefits Section Start */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -106,27 +112,11 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* Benefits Section End  */
 
-.search-engine-optimization {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 55px;
-    height: 400px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 400px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
     height: 400px;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
@@ -136,12 +126,7 @@ p {
     max-height: 250px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 3px;
-    font-size: 50px;
-}
-
-.online-reputation-management h2 {
+.search-engine-optimization h2, .online-reputation-management h2  {
     margin-bottom: 3px;
     font-size: 50px;
 }
@@ -150,7 +135,7 @@ p {
     margin-bottom: 20px;
     font-size: 50px;
 }
-
+/* footer start */
 .footer {
     padding: 30px;
     clear: both;
@@ -160,8 +145,15 @@ p {
 .footer p {
     font-size: 20px;
 }
+/* footer end */
+
+/* Utility Wrapper */
 #wrapper {
     margin-left: auto;
     margin-right: auto;
     width: 1680px;
 }
+/* Utility Wrapper End */
+
+
+/* HORISEON STYLES END */
